fixed the logo animation on mobile

--- a/scss/_animation.scss
+++ b/scss/_animation.scss
@@ -1,12 +1,17 @@
 @use './color' as *;
 
-#logo {
-	position: absolute;
-	right: 50%;
-	left: 50%;
-	bottom: 40%;
-	transform: translate(-50%, -50%);
-	animation: fill 0.5s ease forwards 2s;
+#logo-height {
+	display: flex;
+	place-content: center;
+	width: 50%;
+	height: 100vh;
+	margin: 0 auto;
+
+	#logo {
+		width: 100%;
+		height: auto;
+		animation: fill 0.5s ease forwards 2s;
+	}
 }
 
 #logo path:nth-child(1) {
@@ -113,17 +118,10 @@
 	}
 }
 
-@media screen and (max-width: 960px) {
-	#logo {
-		margin-bottom: 13rem;
-		padding-right: 35rem;
-		transform: scale(1.5);
-	}
-}
-
 @media screen and (max-width: 480px) {
-	#logo {
-		padding-top: 170px;
-		transform: scale(2.5);
+	#logo-height {
+		width: 100%;
+		height: 50vh;
+		padding: 0 48px;
 	}
 }
